plugins {
    id 'java'
    id 'org.springframework.boot' version "${springVersion}"
    id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
    id 'org.ec4j.editorconfig' version "${editorconfigVersion}"
    id 'checkstyle'
    id 'jacoco'
}

group = "${projectGroup}"
version = "${projectVersion}"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

// 인코딩 설정
compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'

// 외부 설정 스크립트 적용
apply from: "${rootDir}/config/checkstyle/checkstyle.gradle"
apply from: "${rootDir}/config/jacoco/jacoco.gradle"
apply from: "${rootDir}/config/editorconfig/editorconfig.gradle"

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // lombok
    compileOnly 'org.projectlombok:lombok:1.18.36' //lombok
    annotationProcessor 'org.projectlombok:lombok'  // lombok 어노테이션 프로세서

    // DB
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.4.3' // jpa
    implementation 'com.mysql:mysql-connector-j' // MySQL Driver

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4' // springdoc
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.4.3' // 유효성 검증을 위한 validation 라이브러리

    // websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // 로그인 관련
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
    runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:4.0.4'

    // 모니터링 관련
    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.4.3'
    implementation 'io.micrometer:micrometer-registry-prometheus:1.13.1'

}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}
